# mcp_coder

./: .gitattributes  .gitignore  .importlinter  .large-files-allowlist  .mcp.json  .mcp.linux.json  .mcp.macos.json  CHANGELOG.md  COMMIT_MSG.md  Claude Code.md  PR_SUMMARY.md  README.md  _ruff_fix_d212_d202.py  _tmp_find_refs.py  add_exports_temp.py  bash.exe.stackdump  check_d212.py  check_docstrings_tmp.py  claude.bat  claude.sh  claude_local.bat  claude_local.sh  fix_imports.py  fix_mypy_errors.py  icoder.bat  icoder_local.bat  install.bat  install.sh  manual_test_import.py  mcp_utils_plan.md  mlflow_implementation.md  project_idea.md  pull_request_summary.md  pyproject.toml  requirements-beta.txt  ruff_check_helper.py  run_claude.bat  setup.py  summary.md  tach.toml  (+20 more)
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: commit-pusher.md  issue-approver.md  issue-updater.md
.claude/commands/: check_branch_status.md  commit_push.md  discuss.md  implementation_approve.md  implementation_finalise.md  implementation_needs_rework.md  implementation_new_tasks.md  implementation_review.md  implementation_review_supervisor.md  issue_analyse.md  issue_approve.md  issue_create.md  issue_update.md  plan_approve.md  plan_review.md  plan_review_supervisor.md  plan_update.md  rebase.md  rebase_design.md.txt
.claude/knowledge_base/: planning_principles.md  refactoring_principles.md
.github/workflows/: approve-command.yml  ci.yml  langchain-integration.yml  publish.yml  release.yml  test-report.yml  upstream-mypy-check.yml
.mcp-coder/responses/: response_2025-09-19T07-08-10.json  (+16 more)
.run/: pytest in tests - just unit tests.run.xml  pytest in tests.run.xml
PR_Info/: DECISIONS.md  DEVELOPMENT_PROCESS.md  PLAN_UPDATES_SUMMARY.md  TASK_TRACKER.md  final_test_structure.md  pr_summary.md
analysis/: findings.md  verify_behavior.py
docs/: CLI_REFERENCE.md  README.md  REPOSITORY_SETUP.md  claude_sdk_response_structure.md  cli-reference.md  coordinator-vscodeclaude.md  dagster_quickstart.md  database_environments.md  iCoder.md  repository-setup.md  test_file_issues_fixed.md
memory/: MEMORY.md
pr_info/: .commit_message.txt  .github_issue_draft.md  DEVELOPMENT_PROCESS.md  README.md  TASK_TRACKER.md  _commit_message.txt  ci_problem_description.md  commit_message.txt  commit_message_step1.txt  commit_message_step2.txt  commit_message_step3.txt  commit_message_temp.txt  error.md  github_Issue_Coder_Workflow.md  implementation_plan.md  implementation_review_log_1.md  implementation_review_log_2.md  implementation_review_log_3.md  implementation_review_log_4.md  implementation_review_log_5.md  implementation_review_log_6.md  issue_analysis_log_1.md  manual_testing_part_d.md  part_d_status.md  plan_review_log_1.md  plan_review_log_2.md  plan_review_log_3.md  step_1_commit_message.txt  step_1_quality_checks.md  step_2_commit_message.txt  step_5_commit_message.txt  summary_result.md  test_results_multiple_labels.md  tmp_commit_message.txt
pr_info2/: TASK_TRACKER.md
repo_architecture_plan/: mcp_monorepo_plan.md  mcp_utils_plan.md
testdata/: conversation_simple_edit.json  design.md  msg_result_final.json  msg_system_init.json  render_nice.py  render_testdata.py  response_text_only.json  tool_edit_file.json  tool_edit_file_large.json  tool_edit_file_large_nice_compact.txt  tool_edit_file_large_nice_full.txt  tool_edit_file_large_raw.txt  tool_edit_file_multi.json  tool_edit_file_multi_nice_compact.txt  tool_edit_file_multi_nice_full.txt  tool_edit_file_multi_raw.txt  tool_edit_file_nice_compact.txt  tool_edit_file_raw.txt  tool_list_directory.json  tool_list_directory_nice_compact.txt  tool_list_directory_nice_full.txt  tool_list_directory_raw.txt  tool_list_symbols.json  tool_list_symbols_nice_compact.txt  tool_list_symbols_raw.txt  tool_permission_denied.json  tool_permission_denied_nice_compact.txt  tool_permission_denied_raw.txt  tool_read_file.json  tool_read_file_large.json  tool_read_file_large_nice_full.txt  tool_read_file_large_raw.txt  tool_read_file_nice_full.txt  tool_read_file_raw.txt  tool_run_mypy.json  tool_run_mypy_nice_compact.txt  tool_run_mypy_raw.txt  tool_run_pylint.json  tool_run_pylint_nice_full.txt  tool_run_pylint_raw.txt  (+10 more)
tests/: README.md  conftest.py  test_claude_client.py  test_claude_client_integration.py  test_claude_code_api.py  test_claude_code_cli.py  test_claude_executable_finder.py  test_create_pr.py  test_create_pr_integration.py  test_input_validation.py  test_integration_simple.py  test_integration_task_tracker.py  test_llm_interface.py  test_llm_serialization.py  test_llm_types.py  test_log_utils.py  test_mcp_code_checker_integration.py  test_mcp_tools_py_integration.py  test_mcp_workspace_git_smoke.py  test_mcp_workspace_github_smoke.py  test_module_exports.py  test_module_integration.py  test_prompt_manager.py  test_prompt_parsing.py  test_prompt_sources.py  test_pyproject_config.py  test_version.py
tools/: __init__.py  _split_sessions.py  check_version.bat  checks2clipboard.bat  commit_summary.bat  compact_diff.py  coordinator_run_loop.bat  debug_vscode_sessions.py  debug_windows.py  delete_other_branches.bat  docstring_stats.sh  extract_mlflow_tool_calls.py  extract_permission_events.py  format_all.bat  format_all.sh  get_latest_mlflow_db_entries.py  get_mlflow_config.py  get_pytest_performance_stats.bat  get_recent_mlflow_runs.py  git-refactor-diff.py  iSort.bat  inspect_mlflow_run.py  install.bat  install.py  lint_imports.bat  lint_imports.sh  lychee_check.bat  manual_streaming_tests.bat  mypy.bat  pr_review.bat  pr_review_highlevel.bat  pr_summary.bat  pycycle_check.bat  pycycle_check.sh  pydeps_graph.bat  pydeps_graph.sh  pylint_check_for_errors.bat  pytest_wf_10_validate_improvements.bat  pytest_wf_1_gather_slow_tests.bat  pytest_wf_4_analyze_markers.bat  (+25 more)
workflows/: README.md  TROUBLESHOOTING.md  __init__.py  create_PR.bat  create_PR.py  create_plan.bat  create_plan.py  define_labels.bat  define_labels.py  implement.bat  implement.py  issue_stats.bat  issue_stats.py  label_config.py  validate_labels.bat  validate_labels.py
(+1282 files in other folders)
