[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-coder"
dynamic = ["version"]
description = "AI-powered software development automation toolkit using Claude Code CLI and MCP servers for intelligent code analysis, testing, and implementation workflows"
authors = [
    {name = "Marcus Jellinghaus", email = "Marcus@Jellinghaus.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "claude-code-sdk",
    "GitPython>=3.1.0",
    "structlog>=23.2.0",
    "python-json-logger>=3.3.0",
    "pyperclip>=1.8.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mcp-code-checker @ git+https://github.com/MarcusJellinghaus/mcp-code-checker.git",
    "PyGithub>=1.59.0",
    "python-jenkins>=1.8.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
# Type stubs - required in PROJECT venv for mypy type resolution
types = [
    "types-pyperclip",
    "types-requests>=2.28.0",
]

# Test utilities - for local development (execution env already has pytest/mypy)
test = [
    "pytest-asyncio",
    "pytest-xdist",
]

# MCP servers - for local development (execution env already has these)
mcp = [
    "mcp-server-filesystem @ git+https://github.com/MarcusJellinghaus/mcp_server_filesystem.git",
]

# Full development setup - combines all groups for local development
dev = [
    "mcp-coder[types,test,mcp]",
    "import-linter>=2.0",
]

[project.scripts]
mcp-coder = "mcp_coder.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Repository" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp_coder/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp_coder#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
mcp_coder = [
    "prompts/*.md",
    "config/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "claude_cli_integration: tests that use real Claude CLI executable (slow)",
    "claude_api_integration: tests that make actual API calls to Claude API (slow)",
    "git_integration: tests with file system git operations (repos, commits)", 
    "checker_integration: tests for code checker integration (pylint, pytest, mypy)",
    "formatter_integration: tests for code formatter integration (black, isort)",
    "github_integration: tests requiring GitHub API access (network, auth needed)",
    "jenkins_integration: tests requiring Jenkins server access (network, auth needed)",
    "integration: general integration tests",
    "execution_dir: tests for --execution-dir feature",
]
# RECOMMENDED usage patterns:
# pytest (no markers) - All unit tests (fast, mocked, default for CI)
# -m "not claude_cli_integration and not claude_api_integration and not git_integration and not formatter_integration and not github_integration" - All unit tests (explicit)
# -m "claude_cli_integration"
# -m "claude_api_integration"
# -m "git_integration"
# -m "checker_integration"
# -m "formatter_integration"
# -m "github_integration"

# Default pytest options:
# --strict-markers: Fail if unknown markers are used (prevents typos)
# --tb=short: Show concise error tracebacks (not full stack traces)
# -v: Verbose output showing individual test names
addopts = ["--strict-markers", "--tb=short", "-n", "auto"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[tool.pylint.main]
# Add project root to Python path so pylint can find workflows module
init-hook = 'import sys; sys.path.insert(0, ".")'

[tool.pylint.messages_control]
# W1203: Disable lazy % formatting - project prefers f-strings for readability
# W0621: Disable redefined-outer-name - pytest fixtures standard pattern
disable = ["W1203", "W0621"]


[tool.mypy]
python_version = "3.11"
# Disable import-untyped errors for libraries without stubs when types-* packages are not installed
# The types-requests package is available in [project.optional-dependencies].types for dev environments
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Disable unreachable warnings for test files due to mypy false positives with assertions
disable_error_code = ["unreachable"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.server.fastmcp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jenkins"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyperclip"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.setuptools_scm]
# Version is automatically determined from git tags
# Tag format: v0.1.0 -> version 0.1.0
# Between releases: 0.1.0.devN+gHASH (includes commit count and hash)

# =============================================================================
# Import Linter Configuration
# =============================================================================
# Enforces architectural boundaries between modules to maintain clean layering.
# Run with: lint-imports
# =============================================================================

[tool.importlinter]
root_package = "mcp_coder"
root_package_paths = ["src"]

# -----------------------------------------------------------------------------
# Contract: Layered Architecture
# -----------------------------------------------------------------------------
# Ensures dependencies flow downward through the architecture:
#   cli -> workflows -> llm/formatters -> utils -> config
#
# Why this matters:
# - Prevents circular dependencies between modules
# - Keeps the CLI as a thin presentation layer
# - Ensures workflows orchestrate but don't leak into infrastructure
# - Maintains utils as reusable, independent components
#
# Known violations to address (TODO: create issues for these):
# - mcp_coder.utils.commit_operations imports from llm and prompt_manager
#   -> This module should be moved to workflows layer
# -----------------------------------------------------------------------------
[[tool.importlinter.contracts]]
name = "Layered Architecture"
type = "layers"
layers = [
    # Layer 1 (top): CLI - entry points, argument parsing, user interaction
    "mcp_coder.cli",
    # Layer 2: Workflows - business logic orchestration, workflow utilities
    "mcp_coder.workflows",
    "mcp_coder.workflow_utils",
    # Layer 3: Domain services - LLM providers, formatters, prompts
    "mcp_coder.llm | mcp_coder.formatters | mcp_coder.prompt_manager",
    # Layer 4: Infrastructure - utilities, MCP checker
    "mcp_coder.utils | mcp_coder.mcp_code_checker",
    # Layer 5 (bottom): Configuration and constants - standalone modules
    "mcp_coder.config | mcp_coder.constants",
]
# Ignore violations from commit_operations - needs refactoring (move to workflows)
ignore_imports = [
    "mcp_coder.utils.commit_operations -> mcp_coder.llm.env",
    "mcp_coder.utils.commit_operations -> mcp_coder.llm.interface",
    "mcp_coder.utils.commit_operations -> mcp_coder.llm.providers.claude.claude_code_api",
    "mcp_coder.utils.commit_operations -> mcp_coder.prompt_manager",
    "mcp_coder.utils.commit_operations -> mcp_coder.constants",
]

# -----------------------------------------------------------------------------
# Contract: Domain Services Independence
# -----------------------------------------------------------------------------
# LLM and Formatters are parallel domain services that should not depend on
# each other. They serve different purposes and should remain decoupled.
#
# Why this matters:
# - Allows independent evolution of LLM and formatting capabilities
# - Prevents feature creep between unrelated domains
# - Makes it easier to replace or modify one without affecting the other
# -----------------------------------------------------------------------------
[[tool.importlinter.contracts]]
name = "Domain Services Independence"
type = "independence"
modules = [
    "mcp_coder.llm",
    "mcp_coder.formatters",
]

# -----------------------------------------------------------------------------
# Contract: Formatter Implementations Independence
# -----------------------------------------------------------------------------
# Black and isort formatters should not import from each other.
# They are independent formatting tools that can be used separately.
#
# Why this matters:
# - Each formatter can be replaced or updated independently
# - Avoids coupling between different formatting strategies
# - Keeps formatter implementations focused and simple
# -----------------------------------------------------------------------------
[[tool.importlinter.contracts]]
name = "Formatter Implementations Independence"
type = "independence"
modules = [
    "mcp_coder.formatters.black_formatter",
    "mcp_coder.formatters.isort_formatter",
]

# -----------------------------------------------------------------------------
# Contract: External Service Integrations Independence
# -----------------------------------------------------------------------------
# GitHub and Jenkins integrations should not depend on each other.
# They are separate external services with independent APIs.
#
# Why this matters:
# - Allows using one service without the other
# - Keeps external service integrations focused
# - Easier to add new integrations without entangling existing ones
#
# Known violation to address (TODO: create issue):
# - mcp_coder.utils.github_operations.pr_manager imports from mcp_coder.utils
#   which transitively imports jenkins_operations via __init__.py
#   -> Solution: Refactor utils/__init__.py to not re-export all submodules
# -----------------------------------------------------------------------------
[[tool.importlinter.contracts]]
name = "External Service Integrations Independence"
type = "independence"
modules = [
    "mcp_coder.utils.github_operations",
    "mcp_coder.utils.jenkins_operations",
]
ignore_imports = [
    "mcp_coder.utils.github_operations.pr_manager -> mcp_coder.utils",
]

# -----------------------------------------------------------------------------
# Contract: Git Operations Local Independence
# -----------------------------------------------------------------------------
# Local git operations should not depend on remote service integrations.
# Git operations work with the local repository only.
#
# Why this matters:
# - Keeps git operations usable offline
# - Maintains clear separation between local and remote operations
# - Allows testing git operations without network mocking
# -----------------------------------------------------------------------------
[[tool.importlinter.contracts]]
name = "Git Operations Local Independence"
type = "forbidden"
source_modules = [
    "mcp_coder.utils.git_operations",
]
forbidden_modules = [
    "mcp_coder.utils.github_operations",
    "mcp_coder.utils.jenkins_operations",
]
