[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-coder"
dynamic = ["version"]
description = "AI-powered software development automation toolkit using Claude Code CLI and MCP servers for intelligent code analysis, testing, and implementation workflows"
authors = [
    {name = "Marcus Jellinghaus", email = "Marcus@Jellinghaus.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "claude-code-sdk",
    "GitPython>=3.1.0",
    "structlog>=23.2.0",
    "python-json-logger>=3.3.0",
    "pyperclip>=1.8.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mcp-code-checker @ git+https://github.com/MarcusJellinghaus/mcp-code-checker.git",
    "PyGithub>=1.59.0",
    "python-jenkins>=1.8.0",
    "requests>=2.28.0",
    "mcp-server-filesystem @ git+https://github.com/MarcusJellinghaus/mcp_server_filesystem.git",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Type stubs - required in PROJECT venv for mypy type resolution
types = [
    "types-pyperclip",
    "types-requests>=2.28.0",
    "types-tabulate>=0.9.0",
]

# Test utilities - for local development (execution env already has pytest/mypy)
test = [
    "pytest-asyncio",
    "pytest-xdist",
]

# MCP servers - for local development (execution env already has these)
mcp = [
    # mcp-server-filesystem moved to main dependencies for check file-size command
]

# Full development setup - combines all groups for local development
dev = [
    "mcp-coder[types,test,mcp]",
    "import-linter>=2.0",
    "pycycle>=0.0.8",
    "tach>=0.6.0",
    "vulture>=2.14",
]

[project.scripts]
mcp-coder = "mcp_coder.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Repository" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp_coder/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp_coder#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
mcp_coder = [
    "prompts/*.md",
    "config/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "claude_cli_integration: tests that use real Claude CLI executable (slow)",
    "claude_api_integration: tests that make actual API calls to Claude API (slow)",
    "git_integration: tests with file system git operations (repos, commits)", 
    "checker_integration: tests for code checker integration (pylint, pytest, mypy)",
    "formatter_integration: tests for code formatter integration (black, isort)",
    "github_integration: tests requiring GitHub API access (network, auth needed)",
    "jenkins_integration: tests requiring Jenkins server access (network, auth needed)",
    "integration: general integration tests",
    "execution_dir: tests for --execution-dir feature",
]
# RECOMMENDED usage patterns:
# pytest (no markers) - All unit tests (fast, mocked, default for CI)
# -m "not claude_cli_integration and not claude_api_integration and not git_integration and not formatter_integration and not github_integration" - All unit tests (explicit)
# -m "claude_cli_integration"
# -m "claude_api_integration"
# -m "git_integration"
# -m "checker_integration"
# -m "formatter_integration"
# -m "github_integration"

# Default pytest options:
# --strict-markers: Fail if unknown markers are used (prevents typos)
# --tb=short: Show concise error tracebacks (not full stack traces)
# -n auto: Run tests in parallel using all available CPUs
# -p no:tach: Disable tach plugin (noisy output about unaffected tests)
addopts = ["--strict-markers", "--tb=short", "-n", "auto", "-p", "no:tach"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[tool.pylint.main]
# Add project root to Python path so pylint can find workflows module
init-hook = 'import sys; sys.path.insert(0, ".")'

[tool.pylint.messages_control]
# W1203: Disable lazy % formatting - project prefers f-strings for readability
# W0621: Disable redefined-outer-name - pytest fixtures standard pattern
disable = ["W1203", "W0621"]
# R0401: Enable cyclic-import detection (not enabled by default as it's in refactor category)
enable = ["R0401"]


[tool.mypy]
python_version = "3.11"
# Disable import-untyped errors for libraries without stubs when types-* packages are not installed
# The types-requests package is available in [project.optional-dependencies].types for dev environments
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Disable unreachable warnings for test files due to mypy false positives with assertions
# Disable union-attr for test files where mocked attributes are intentionally set
disable_error_code = ["unreachable", "union-attr"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.server.fastmcp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jenkins"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyperclip"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["win32gui"]
ignore_missing_imports = true

[tool.setuptools_scm]
# Version is automatically determined from git tags
# Tag format: v0.1.0 -> version 0.1.0
# Between releases: 0.1.0.devN+gHASH (includes commit count and hash)

# Note: import-linter configuration is in .importlinter file (INI format)
# to reduce token usage when LLMs read pyproject.toml
