[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-coder"
dynamic = ["version"]
description = "AI-powered software development automation toolkit using Claude Code CLI and MCP servers for intelligent code analysis, testing, and implementation workflows"
authors = [
    {name = "Marcus Jellinghaus", email = "Marcus@Jellinghaus.ch"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "claude-code-sdk",
    "GitPython>=3.1.0",
    "structlog>=23.2.0",
    "python-json-logger>=3.3.0",
    "pyperclip>=1.8.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mcp-tools-py",
    "PyGithub>=1.59.0",
    "python-jenkins>=1.8.0",
    "requests>=2.28.0",
    "mcp-workspace",
    "psutil>=5.9.0",
    "tabulate>=0.9.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Type stubs - required in PROJECT venv for mypy type resolution
types = [
    "types-pyperclip",
    "types-requests>=2.28.0",
    "types-tabulate>=0.9.0",
]

# Test utilities - for local development (execution env already has pytest/mypy)
test = [
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-textual-snapshot>=1.0.0",
]

# MCP servers - for local development (execution env already has these)
mcp = [
    # mcp-workspace moved to main dependencies for check file-size command
]

# MLflow integration - for conversation logging and analytics
mlflow = [
    "mlflow>=2.10.0",
]

# OS certificate store integration — fixes SSL errors behind corporate proxies
truststore = [
    "truststore>=0.9.0",
]

# LangChain integration — alternative LLM providers (OpenAI, Gemini, Anthropic, …)
langchain = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
]

# Textual TUI - for interactive coding interface
tui = [
    "textual>=1.0.0",
    "textual-dev>=1.0.0",
]

# Full development setup - combines all groups for local development
dev = [
    "mcp-coder[types,test,mcp,langchain,mlflow,tui]",
    "import-linter>=2.0",
    "pycycle>=0.0.8",
    "pydeps>=3.0.0",
    "tach>=0.6.0",
    "vulture>=2.14",
    "ruff>=0.9.0",
]

[project.scripts]
mcp-coder = "mcp_coder.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Repository" = "https://github.com/MarcusJellinghaus/mcp_coder"
"Bug Tracker" = "https://github.com/MarcusJellinghaus/mcp_coder/issues"
"Documentation" = "https://github.com/MarcusJellinghaus/mcp_coder#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
mcp_coder = [
    "prompts/*.md",
    "config/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "claude_cli_integration: tests that use real Claude CLI executable (slow)",
    "claude_api_integration: tests that make actual API calls to Claude API (slow)",
    "git_integration: tests with file system git operations (repos, commits)", 
    "checker_integration: tests for code checker integration (pylint, pytest, mypy)",
    "formatter_integration: tests for code formatter integration (black, isort)",
    "github_integration: tests requiring GitHub API access (network, auth needed)",
    "jenkins_integration: tests requiring Jenkins server access (network, auth needed)",
    "mlflow_integration: tests requiring MLflow installation and functionality",
    "llm_integration: end-to-end tests with real LLM call, real MLflow logging, real DB check (slow, requires provider credentials)",
    "langchain_integration: tests requiring LangChain and provider API access (network, auth needed)",
    "integration: general integration tests",
    "textual_integration: tests requiring Textual TUI (headless app, pilot, snapshots)",
    "execution_dir: tests for --execution-dir feature",
]
# RECOMMENDED usage patterns:
# pytest (no markers) - All unit tests (fast, mocked, default for CI)
# -m "not claude_cli_integration and not claude_api_integration and not git_integration and not formatter_integration and not github_integration and not langchain_integration and not textual_integration" - All unit tests (explicit)
# -m "claude_cli_integration"
# -m "claude_api_integration"
# -m "git_integration"
# -m "checker_integration"
# -m "formatter_integration"
# -m "github_integration"
# -m "textual_integration"

# Default pytest options:
# --strict-markers: Fail if unknown markers are used (prevents typos)
# --tb=short: Show concise error tracebacks (not full stack traces)
# -n auto: Run tests in parallel using all available CPUs
# -p no:tach: Disable tach plugin (noisy output about unaffected tests)
addopts = ["--strict-markers", "--tb=short", "-n", "auto", "-p", "no:tach"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
float_to_top = true

[tool.pylint.main]
# Add project root to Python path so pylint can find workflows module
init-hook = 'import sys; sys.path.insert(0, ".")'
# Allow pylint to analyse C-extension modules (win32gui, win32process)
extension-pkg-allow-list = ["win32gui", "win32process"]

[tool.pylint.messages_control]
disable = [
    "C",       # conventions — not enabled in this project
    "R",       # refactor suggestions — not enabled in this project
    "W1203",   # logging-fstring-interpolation — project uses f-strings for readability
    "W0621",   # redefined-outer-name — standard pytest fixture pattern
    "W0511",   # fixme/TODO — informational only, not a quality gate
    "W0212",   # protected-access — legitimate in tests and controlled src usage
    "W0613",   # unused-argument — pytest fixtures injected by name
    "W0611",   # unused-import — fixture imports, conftest re-exports
    "W0404",   # reimported — reimports across test functions
    "W0718",   # broad-exception-caught — intentional catch-all in CLI/workflow error handling
    "W0706",   # try-except-raise — explicit re-raise for clarity in error chains
    "W4903",   # deprecated-argument — tracked for future cleanup
]
enable = ["R0401"]


[tool.mypy]
python_version = "3.11"
# Disable import-untyped errors for libraries without stubs when types-* packages are not installed
# The types-requests package is available in [project.optional-dependencies].types for dev environments
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
# Disable unreachable warnings for test files due to mypy false positives with assertions
# Disable union-attr for test files where mocked attributes are intentionally set
disable_error_code = ["unreachable", "union-attr"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.server.fastmcp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jenkins"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyperclip"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["win32gui"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mlflow", "mlflow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langchain_core", "langchain_core.*"]
ignore_missing_imports = true
follow_imports = "skip"  # modules are optional, skip to avoid errors when not installed

[[tool.mypy.overrides]]
module = ["langchain_openai"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["langchain_google_genai"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["langchain_anthropic"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["langchain_mcp_adapters", "langchain_mcp_adapters.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["langgraph", "langgraph.*"]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["truststore"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true

[tool.setuptools_scm]
# Version is automatically determined from git tags
# Tag format: v0.1.0 -> version 0.1.0
# Between releases: 0.1.0.devN+gHASH (includes commit count and hash)

# Note: import-linter configuration is in .importlinter file (INI format)
# to reduce token usage when LLMs read pyproject.toml

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Only enable docstring rules for now
# preview needed for DOC rules (pydoclint)
preview = true
select = ["D", "DOC"]
ignore = [
    "D104",  # missing docstring in __init__.py (low value)
    "D107",  # missing docstring in __init__ method (redundant with class docstring)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "DOC"]
"src/mcp_coder/llm/serialization.py" = ["DOC502"]
"src/mcp_coder/utils/user_config.py" = ["DOC502"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mcp-coder.from-github]
# Installed WITH deps (leaves — picks up new external deps)
packages = [
    "mcp-config-tool @ git+https://github.com/MarcusJellinghaus/mcp-config.git",
    "mcp-workspace @ git+https://github.com/MarcusJellinghaus/mcp-workspace.git",
]
# Installed WITHOUT deps (depend on siblings — avoid downgrading)
packages-no-deps = [
    "mcp-tools-py @ git+https://github.com/MarcusJellinghaus/mcp-tools-py.git",
]
